--- a/style.css
+++ b/style.css
@@ -5,8 +5,21 @@ body {
 
 }
 
-.iconText {
+td {
+    padding: 25px;
+    text-align: center;
+}
+
+.icon {
     color: white;
     text-shadow: 2px 2px 4px black; /* X-offset, Y-offset, blur-radius, shadow-color */
-    text-align: center;
+}
+
+.icon div {
+    display: block;
+}
+
+.icon img {
+    width: 40px;
+    height: 40px;
 }
