--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ td {
 
 .bottomBar {
     width: 100%;
+    left: 0;
     background-color: white;
 }
 
@@ -40,4 +41,5 @@ td {
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin: auto;
 }
