Screwed up the colors, changed

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ td {
 .bottomBar {
     width: 100%;
     left: 0;
-    background-color: white;
+    background-color: black;
 }
 
 .bottomBar p {
