--- a/style.css
+++ b/style.css
@@ -47,6 +47,14 @@ a {
     font-style: normal;
 }
 
+.ubuntu-sans-mono-normalText {
+    font-family: "Ubuntu Sans Mono", monospace;
+    font-optical-sizing: auto;
+    font-size: 13px;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 .footer {
     background-color: #000000;
     color: white;
@@ -59,6 +67,7 @@ a {
 
 #aboutMeContent {
     position: absolute;
+    justify-content: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -66,6 +75,13 @@ a {
     background-image: url('images/window.png');
     height: 55%;
     width: 55%;
+}
+
+.aboutMeHeader {
+    font-family: "Pixelify Sans", sans-serif;
+    color: white;
+    margin-top: -.02%;
+    margin-left: 1%;
 }
 
 #skillsContent {
